Refactored Version-4 design of bird class refactored